[package]
name = "bandit"
version = "0.1.0"
edition = "2021"
authors = ["Andy Dixon <bandit@dixon.cx>"]
description = "Bandit - Post-Quantum Extended Diffie-Hellman file encryption system with security key support"

[dependencies]
# Post-quantum cryptography
pqc_kyber = "0.7"
x25519-dalek = "2.0"
ed25519-dalek = "2.1"

# Symmetric encryption
chacha20poly1305 = "0.10"
aes-gcm = "0.10"

# Key derivation and hashing
argon2 = "0.5"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"

# Random number generation
rand = "0.8"
getrandom = "0.2"

# Encoding and serialisation
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Command-line interface
clap = { version = "4.5", features = ["derive", "cargo"] }
rpassword = "7.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File I/O and paths
tempfile = "3.10"

# Security key support (FIDO2/WebAuthn)
ctap-hid-fido2 = "3.5"

# Zeroisation for secure memory
zeroize = { version = "1.7", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
